# diarizen

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
docker/: cann82rc2.dockerfile  cu124.dockerfile  cu128.dockerfile
src/diarizen/commands/: grpc_app.py
src/diarizen/inferencer/: grpc_inferencer.py
src/diarizen/inferencer/diarizen/: inferencer.py  onnx_inferencer.py
src/diarizen/models/diarizen/: model.py
src/diarizen/models/diarizen/wav2vec2/: components.py  model.py
src/diarizen/proto/: ux_speaker_diarization.proto  ux_speaker_diarization_pb2.py  ux_speaker_diarization_pb2.pyi  ux_speaker_diarization_pb2_grpc.py  ux_speaker_diarization_pb2_grpc.pyi
src/diarizen/server/: grpc_inferencer.py  server.py
src/diarizen/utils/: audition_formatter.py
tests/client/: test_client.py
tests/diarazation/: export_jit.py  test_infer.py
tests/infer-diarazation/: test_infer.py
tests/speed/campplus/: test_speed_jit.py
